remediation/nat-gateway.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Centralized NAT Gateway for private subnet egress traffic'

Parameters:
  VpcId:
    Type: String
    Description: VPC ID for NAT Gateway
  PublicSubnetId:
    Type: String
    Description: Public subnet ID for NAT Gateway placement
  PrivateRouteTableIds:
    Type: CommaDelimitedList
    Description: Route table IDs for private subnets

Resources:
  NATGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: nat-gateway-eip

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnetId
      Tags:
        - Key: Name
          Value: centralized-nat-gateway

  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Select [0, !Ref PrivateRouteTableIds]
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  PrivateRoute2:
    Type: AWS::EC2::Route
    Condition: HasSecondRouteTable
    Properties:
      RouteTableId: !Select [1, !Ref PrivateRouteTableIds]
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

Conditions:
  HasSecondRouteTable: !Not [!Equals [!Select [1, !Ref PrivateRouteTableIds], '']]

Outputs:
  NATGatewayId:
    Value: !Ref NATGateway
  ElasticIP:
    Value: !Ref NATGatewayEIP
